# telegram-bot-anycode-recognizer

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  base64e.py  generator_tests.ipynb  generators.py  main.py  pyproject.toml  reader.py  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: lint_and_types.yml  restrict_curse_words.yml
modules/: generators.py  reader.py  signature.py
src/anycode-recognizer-bot/: logging.py  main.py
src/anycode-recognizer-bot/ImgTools/: __init__.py  generators.py  reader.py  signature.py
src/anycode-recognizer-bot/callbacks/: __init__.py  help.py  pic_decoder.py  pic_generator.py  start.py
