[tool.poetry]
name = "barcodes recognizer via telegram"
version = "0.1.0"
description = "This is a barcodes (including ean, qr and other datamatrix codes) recognizer with chatbot interface for Telegram."
authors = ["benzlokzik"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^0.21.0"
Pillow = "^9.4.0"
python-barcode = "^0.14.0"
python-telegram-bot = "^20.0"
pyzbar = "^0.1.9"
qrcode = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
